fixed overflow on homepage

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,24 +5,19 @@ body {
     overflow-x: hidden;
     font-family: "Poppins", sans-serif;
     color: #fff;
+    margin: 0;
 }
 
-main {
+.wrapper.main-page {
     height: 100vh;
     width: 100%;
-    margin: 0 auto;
-    padding: 20px;
-    overflow: auto;
+    overflow: none;
+    display: flex;
+    align-items: center;
 }
 
-main div.wrapper {
-    width: 50%;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    padding: 20px;
-    overflow: auto;
+.wrapper .text {
+    margin: 0 10vw;
 }
 
 .wrapper .text h1 {
